releasing container images only for linux/amd64 for now

--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -9,5 +9,5 @@ jobs:
          - name: Build & Push image
            run: |
               docker login --username rdev2021 --password ${{ secrets.GH_PAT }} ghcr.io
-              docker build . --tag ghcr.io/rdev2021/network-test:latest
+              docker build . --platform linux/amd64 --tag ghcr.io/rdev2021/network-test:latest
               docker push ghcr.io/rdev2021/network-test:latest
